# emle-mace

./: .gitignore  LICENSE  README.md  REFACTORING_PLAN.md  pyproject.toml
emle_mace/: __init__.py  loss.py
emle_mace/cli/: _entry.py  _eval_entry.py  eval_configs.py  run_train.py
emle_mace/data/: __init__.py
emle_mace/models/: __init__.py  _emle_mace.py  _readouts.py
emle_mace/tools/: __init__.py  arg_parser.py  evaluate.py  metrics.py  model_utils.py  scripts_utils.py
tests/: conftest.py  test_loss.py  test_model.py  test_parameter_count.py  test_training.py
